updated build.gradle to current lib versions, added FuleUtil.java

--- a/java/.gitignore
+++ b/java/.gitignore
@@ -1,3 +1,19 @@
+## cj
+
+**/.DS_Store
+**/*.class
+**/*.jar
+**/*.pyc
+**/*.zip
+
+**/.idea/
+**/bin/*
+**/build/
+**/log/
+**/out/
+**/tmp/
+
+
 # Ignore Gradle project-specific cache directory
 .gradle
 
