--- a/java/app/build.gradle
+++ b/java/app/build.gradle
@@ -12,7 +12,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.azure:azure-cosmos:4.52.0'
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation "com.azure:azure-cosmos:4.48.2"
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
     implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'com.opencsv:opencsv:5.8'
