--- a/java/app/build.gradle
+++ b/java/app/build.gradle
@@ -49,6 +49,5 @@ task load_cosmos_baseball_batters_local_throughput(type: JavaExec) {
 task load_cosmos_baseball_batters_global_throughput(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     mainClass = 'org.cjoakim.cosmos.App'
-    args 'load_cosmos_baseball_batters', 'global', 'dev', 'unittests', 'all'
+    args 'load_cosmos_baseball_batters', 'global', 'dev', 'unittests', 'nya'
 }
-
