local and global throughput tests

--- a/java/app/build.gradle
+++ b/java/app/build.gradle
@@ -43,11 +43,11 @@ application {
 task load_cosmos_baseball_batters_local_throughput(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     mainClass = 'org.cjoakim.cosmos.App'
-    args 'load_cosmos_baseball_batters', 'local', 'dev', 'unittests', 'nya'
+    args 'load_cosmos_baseball_batters', 'local', 'dev', 'local', 'all'
 }
 
 task load_cosmos_baseball_batters_global_throughput(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     mainClass = 'org.cjoakim.cosmos.App'
-    args 'load_cosmos_baseball_batters', 'global', 'dev', 'unittests', 'nya'
+    args 'load_cosmos_baseball_batters', 'global', 'dev', 'global', 'all'
 }
