--- a/java/app/build.gradle
+++ b/java/app/build.gradle
@@ -49,11 +49,11 @@ task gmt_time_generated_kql(type: JavaExec) {
 task load_cosmos_baseball_batters_local_throughput(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     mainClass = 'org.cjoakim.cosmos.App'
-    args 'load_cosmos_baseball_batters', 'local', 'dev', 'test', 'all', '100'
+    args 'load_cosmos_baseball_batters', 'local', 'dev', 'test', 'all', '10'
 }
 
 task load_cosmos_baseball_batters_global_throughput(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     mainClass = 'org.cjoakim.cosmos.App'
-    args 'load_cosmos_baseball_batters', 'global', 'dev', 'global', 'all'
+    args 'load_cosmos_baseball_batters', 'global', 'dev', 'global', 'all', '10'
 }
